fixed div box heights on overflow that was causing messages to flow outside of chatbox

--- a/client/templates/chat/chat.css
+++ b/client/templates/chat/chat.css
@@ -29,10 +29,11 @@ list-style-type: none;
 
 #allMessages {
   position: relative;
-  bottom:30px;
+  bottom:20px;
   width:100%;
   height: 450px;
   overflow: auto;
+  top: 10px;
 
 }
 
